--- a/WebRoot/admin/css/public.css
+++ b/WebRoot/admin/css/public.css
@@ -696,7 +696,8 @@ select {
 
 /* 单页面
 ----------------------------------------------- */
-.page dl {
+/**/
+.spage dl {
  border: 1px dotted #CCC;
  background-color: #DDDDDD;
  float: left;
@@ -705,30 +706,30 @@ select {
  margin: 0 15px 15px 0;
  text-align: center;
 }
-.page dl.child1 {
+.spage dl.child1 {
  border: 1px dotted #DDDDDD;
  background-color: #EEEEEE;
 }
-.page dl.child2 {
+.spage dl.child2 {
  border: 1px dotted #EEEEEE;
  background-color: #F6F6F6;
 }
-.page dl.child3 {
+.spage dl.child3 {
  border: 1px dotted #F6F6F6;
  background-color: #FFFFFF;
 }
-.page dt {
+.spage dt {
  padding: 8px 0;
  color: #555;
 }
-.page dt p {
+.spage dt p {
  padding-top: 5px;
  color: #999;
 }
-.page dd {
+.spage dd {
  color: #CCC;
 }
-.page dd a {
+.spage dd a {
  color: #999;
 }
 /* 手机版
